# contracts.near-linkdrop

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  build.sh  test.sh
linkdrop/: Cargo.toml
linkdrop/src/: create_user_account.rs  lib.rs
near-campaign/src/: add_keys.rs  clear_state.rs  get_campaign_metadata.rs  lib.rs  new.rs  set_social_network.rs  set_start_and_end_date.rs
near-campaign/src/tests/utils/: create_campaign.rs  get_context.rs
tests/: Cargo.toml
tests/sim/: access_keys_added.rs  add_keys_after_end_date.rs  add_keys_before_end_date.rs  claim_one_link.rs  client_flow.rs  create_one_account.rs  main.rs  set_campaign_dates.rs  set_campaign_social_network.rs
tests/sim/utils/: init.rs  init_external_linkdrop.rs  init_internal_linkdrop.rs  init_near_campaign.rs  init_near_campaign_with_timestamp.rs  keys.rs  mod.rs
user/: Cargo.toml
user/src/: lib.rs
