[package]
name = "linkdrop-wrapper"
version = "0.1.0"
authors = ["eclipseeer <eclipseeer@gmail.com>"]
edition = "2018"

[workspace]
members = ['near-campaign', 'linkdrop', 'user', 'tests']
default-members = ['near-campaign', 'linkdrop', 'user', 'tests']

[dev-dependencies]
linkdrop = { path = "linkdrop" }
user = { path = "user" }
near-campaign = { path = "near-campaign" }
tests = { path = "tests" }

[[test]]
name="integration"
path="tests"
