[package]
name = "linkdrop-wrapper"
version = "0.1.0"
authors = ["eclipseeer <eclipseeer@gmail.com>"]
edition = "2018"

[workspace]
members = ['near-campaign', 'linkdrop', 'user', 'tests']
default-members = ['near-campaign', 'linkdrop', 'user', 'tests']

[profile.release]
codegen-units = 1
# Tell `rustc` to optimize for small code size.
opt-level = "z"
lto = true
debug = false
panic = "abort"
# Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
overflow-checks = true

[[test]]
name="integration"
path="tests"
